--- a/specbuild.yml
+++ b/specbuild.yml
@@ -1,10 +1,10 @@
 version: 0.2
 env:
   variables:
-    AMI_FILTER: "amzn-ami-hvm-*-x86_64-gp2"
-    AMI_PREFIX: "amazon-linux-ansible-packer"
-    OS_VERSION: "Amazon Linux Base AMI"
-    PACKER_VERSION: 1.1.3
+    AMI_FILTER: "ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"
+    AMI_PREFIX: "dev-cnr-ubuntu-20_04-hardened-"
+    OS_VERSION: "Ubuntu 20.04"
+    PACKER_VERSION: 1.8.6
     USER: root
 phases:
   installing_prerequisites:
@@ -15,21 +15,19 @@ phases:
       - pip install --upgrade pip
       - pip install ansible
       - pip install awscli
-      - curl -o packer.zip https://releases.hashicorp.com/packer/${PACKER_VERSION}/packer_${PACKER_VERSION}_linux_amd64.zip
+      - curl -o packer.zip https://releases.hashicorp.com/packer/${PACKER_VERSION}/packer_${PACKER_VERSION}_linux_x86_64.zip
       - unzip packer.zip
       - mv packer /usr/local/bin
       - packer --version
       - ansible --version
       - aws --version
-      
-
   pre_build:
     commands:
       - echo "Configuring AWS credentials..."
       - aws configure set region $AWS_REGION
   build:
     commands:
-      - packer validate packer/linux_aws_ansible_pipeline.json && PACKER_LOG=1 packer build packer/linux_aws_ansible_pipeline.json  | tee build.log
+      - packer validate packer/linux_aws_ansible_pipeline.json && PACKER_LOG=1 packer build ubuntu-hardenend.json  | tee build.log
   post_build:
     commands:
       - egrep "${AWS_REGION}\:\sami\-" build.log | cut -d' ' -f2 > ami_id
