--- a/specbuild.yml
+++ b/specbuild.yml
@@ -15,9 +15,9 @@ phases:
       - pip install --upgrade pip
       - pip install ansible
       - pip install awscli
-      - curl -o packer.zip https://releases.hashicorp.com/packer/${PACKER_VERSION}/packer_${PACKER_VERSION}_linux_x86_64.zip
-      - unzip packer.zip
-      - mv packer /usr/local/bin
+      - curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
+      - sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+      - sudo apt-get update && sudo apt-get install packer
       - packer --version
       - ansible --version
       - aws --version
