--- a/specbuild.yml
+++ b/specbuild.yml
@@ -25,9 +25,17 @@ phases:
     commands:
       - echo "Configuring AWS credentials..."
       - aws configure set region $AWS_REGION
+      - curl -qL -o aws_credentials.json http://169.254.170.2/$AWS_CONTAINER_CREDENTIALS_RELATIVE_URI > aws_credentials.json
+      - cat aws_credentials.json
   build:
     commands:
-      - packer validate build ubuntu-hardenend.json && PACKER_LOG=1 packer build ubuntu-hardenend.json  | tee build.log
+      - export PACKER_LOG=1
+      - echo $PACKER_LOG
+      - echo "Validating ubuntu-hardened.json"
+      - ls -l .
+      - packer validate ./ubuntu-hardened.json
+      - echo "Building HashiCorp Packer template, ubuntu-hardened.json"
+      - packer build ./ubuntu-hardened.json | tee build.log
   post_build:
     commands:
       - egrep "${AWS_REGION}\:\sami\-" build.log | cut -d' ' -f2 > ami_id
